<resources>
    <string name="app_name">Simulação Easynvest</string>
    <string name="how_much_invest">Quanto você gostaria de aplicar? *</string>
    <string name="brasil_money">R$</string>
    <string name="what_is_investment_due_due">Qual a data do vencimento do investimento? *</string>
    <string name="date_format">dia/mês/ano</string>
    <string name="what_is_cdi_percentage">Qual o percentual do CDI do investimento? *</string>
    <string name="percentage">%</string>
    <string name="simulate">Simular</string>
    <string name="ops_error">Ops... Ocorreu um erro</string>
    <string name="sorry_about_the_error">Pedimos desculpas pelo erro. Favor tentar novamente mais tarde.</string>
    <string name="simulate_result">Resultado da simulação</string>
    <string name="default_tv_simulate_result">R$ 1.088,69</string>
    <string name="total_profit">Rendimento total de </string>
    <string name="default_total_profit">R$ 88,69</string>
    <string name="initial">Valor aplicado inicialmente</string>
    <string name="default_initial">R$ 1.000,00</string>
    <string name="brute">Valor bruto do investimento</string>
    <string name="default_brute">R$ 1.088,69</string>
    <string name="profits">Valor do rendimento</string>
    <string name="default_profits">R$ 88,69</string>
    <string name="ir_over_profits">IR sobre o rendimento</string>
    <string name="default_ir_over_profits">R$ 15,52(17,50%)</string>
    <string name="liquid_profits">Valor líquido do investimento</string>
    <string name="default_liquid_profits">R$ 1.073,17</string>
    <string name="redemption_date">Data do resgate</string>
    <string name="default_redemption_date">27/10/2018</string>
    <string name="running_days">Dias corridos</string>
    <string name="default_running_days">365</string>
    <string name="monthly_profits">Rendimento mensal</string>
    <string name="default_monthly_profits">0,57%</string>
    <string name="cdi_percentage">Percentual do CDI do investimento</string>
    <string name="default_cdi_percentage">123%</string>
    <string name="year_profit">Rentabilidade anual</string>
    <string name="default_year_profit">7,09%</string>
    <string name="period_profit">Rentabilidade no período</string>
    <string name="default_period_profit">8,87%</string>
    <string name="simulate_again">Simular novamente</string>
</resources>
