<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".simulate.view.SimulateActivity"
    android:paddingTop="50dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background = "@drawable/custom_progress_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomEditText"
        android:text="@string/sorry_about_the_error"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/tv_simulate_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewSmall"
                android:text="@string/simulate_result"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_simulate_result_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewBig"
                android:text="@string/default_tv_simulate_result"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_simulate_result"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/layout_profits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_simulate_result_value">

                <TextView
                    android:id="@+id/tv_total_profit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextViewSmall"
                    android:text="@string/total_profit" />

                <TextView
                    android:id="@+id/tv_total_profit_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextViewSmall"
                    android:textColor="@color/colorImportantValues"
                    android:text="@string/default_total_profit"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_initial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/initial"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_profits"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_initial_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_initial"
                app:layout_constraintTop_toTopOf="@+id/tv_initial"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_brute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/brute"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_initial_value"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_brute_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_brute"
                app:layout_constraintTop_toTopOf="@+id/tv_brute"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_profits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/profits"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_brute"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_profits_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_profits"
                app:layout_constraintTop_toTopOf="@+id/tv_profits"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_ir_over_profits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/ir_over_profits"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_profits"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_ir_over_profits_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_ir_over_profits"
                app:layout_constraintTop_toTopOf="@+id/tv_ir_over_profits"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_liquid_profits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/liquid_profits"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_ir_over_profits"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_liquid_profits_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_liquid_profits"
                app:layout_constraintTop_toTopOf="@+id/tv_liquid_profits"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_redemption_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/redemption_date"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_liquid_profits"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_redemption_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_redemption_date"
                app:layout_constraintTop_toTopOf="@+id/tv_redemption_date"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_running_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/running_days"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_redemption_date"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_running_days_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_running_days"
                app:layout_constraintTop_toTopOf="@+id/tv_running_days"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_monthly_profits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/monthly_profits"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_running_days"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_monthly_profits_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_monthly_profits"
                app:layout_constraintTop_toTopOf="@+id/tv_monthly_profits"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_cdi_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/cdi_percentage"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_monthly_profits"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_cdi_percentage_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_cdi_percentage"
                app:layout_constraintTop_toTopOf="@+id/tv_cdi_percentage"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_year_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/year_profit"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_cdi_percentage"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_year_profit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_year_profit"
                app:layout_constraintTop_toTopOf="@+id/tv_year_profit"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_period_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/period_profit"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_year_profit"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_period_profit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewList"
                android:text="@string/default_period_profit"
                app:layout_constraintTop_toTopOf="@+id/tv_period_profit"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btn_simulate_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simulate_again"
                style="@style/CustomButton"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/tv_period_profit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
