<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".simulate.view.FormActivity"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_invested_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomTextView"
            android:text="@string/how_much_invest"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/et_invested_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomEditText"
            android:hint="@string/brasil_money"
            app:layout_constraintTop_toBottomOf="@id/tv_invested_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_maturity_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomTextView"
            android:text="@string/what_is_investment_due_due"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/et_invested_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/et_maturity_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomEditText"
            android:hint="@string/date_format"
            app:layout_constraintTop_toBottomOf="@id/tv_maturity_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomTextView"
            android:text="@string/what_is_cdi_percentage"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/et_maturity_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/et_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomEditText"
            android:hint="@string/percentage"
            app:layout_constraintTop_toBottomOf="@id/tv_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_simulate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simulate"
            style="@style/CustomButton"
            android:enabled="false"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/et_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>